Completed BasicCardTest